force-app/main/default/objects/Staffing_Details__c/Staffing_Details__c.object-meta.xml
<CustomObject>
    <description>Stores the staffing details records per month</description>
    <label>Staffing Detail</label>
    <nameField>
        <displayFormat>SD-{YYYY}{MM}-{0}</displayFormat>
        <label>Staffing Details Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Staffing Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>