force-app/main/default/objects/Staffing_Details__c/fields/Allocated_within_Role__c.field-meta.xml
<CustomField>
    <fullName>Allocated_within_Role__c</fullName>
    <formula>Gross_Revenue__c * Allocation__c * Role_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Allocated within Role</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>