force-app/main/default/objects/Staffing_Details__c/fields/Allocation__c.field-meta.xml
<CustomField>
    <fullName>Allocation__c</fullName>
    <description>Allocation for the staff for the role</description>
    <formula>IF(Total_Role_Allocation__c &lt;&gt; 0, IF(Role_Count__c &lt;&gt; 0, Role_Allocation__c / Role_Count__c, 0) / Total_Role_Allocation__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Allocation for the staff for the role</inlineHelpText>
    <label>Allocation</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>