force-app/main/default/objects/Staffing_Details__c/fields/Aquisition_Name__c.field-meta.xml
<CustomField>
    <fullName>Aquisition_Name__c</fullName>
    <description>Populated if the allocated revenue is not consolidated into HL revenue.</description>
    <inlineHelpText>Populated if the allocated revenue is not consolidated into HL revenue.</inlineHelpText>
    <label>Aquisition Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>