force-app/main/default/objects/Staffing_Details__c/fields/Client_Number__c.field-meta.xml
<CustomField>
    <fullName>Client_Number__c</fullName>
    <formula>Engagement__r.Client__r.Client_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Number</label>
    <type>Text</type>
</CustomField>