force-app/main/default/objects/Staffing_Details__c/fields/DEMO_RECORD__c.field-meta.xml
<CustomField>
    <fullName>DEMO_RECORD__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DEMO RECORD</label>
    <type>Checkbox</type>
</CustomField>