force-app/main/default/objects/Staffing_Details__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <description>Department of the staff</description>
    <label>Department</label>
    <length>50</length>
    <type>Text</type>
</CustomField>