force-app/main/default/objects/Staffing_Details__c/fields/Engagement__c.field-meta.xml
<CustomField>
    <fullName>Engagement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Engagement</label>
    <referenceTo>Engagement__c</referenceTo>
    <relationshipLabel>Staffing Details</relationshipLabel>
    <relationshipName>Staffing_Details</relationshipName>
    <type>Lookup</type>
</CustomField>