force-app/main/default/objects/Staffing_Details__c/fields/Engagement_Name__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Name__c</fullName>
    <formula>Engagement__r.Name1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Engagement Name</label>
    <type>Text</type>
</CustomField>