force-app/main/default/objects/Staffing_Details__c/fields/Engagement_Number__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Number__c</fullName>
    <formula>Engagement__r.Engagement_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Engagement Number</label>
    <type>Text</type>
</CustomField>