force-app/main/default/objects/Staffing_Details__c/fields/Fully_Allocated_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Fully_Allocated_Revenue__c</fullName>
    <formula>Gross_Revenue__c  * Allocation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fully Allocated Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>