force-app/main/default/objects/Staffing_Details__c/fields/FY__c.field-meta.xml
<CustomField>
    <fullName>FY__c</fullName>
    <formula>Revenue_Accrual__r.FY__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FY</label>
    <type>Text</type>
</CustomField>