force-app/main/default/objects/Staffing_Details__c/fields/Gross_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Gross_Revenue__c</fullName>
    <formula>IF(  NOT(Is_Bad_Debt__c),  Revenue_Accrual__r.Period_Accrued_Fee_Net__c,  Revenue_Accrual__r.Period_Outstanding_AR_Net__c ) * Revenue_Accrual__r.Rate_to_USD__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gross Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>