force-app/main/default/objects/Staffing_Details__c/fields/Industry_Group__c.field-meta.xml
<CustomField>
    <fullName>Industry_Group__c</fullName>
    <formula>Engagement__r.Industry_Group_REPORTING__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Industry Group</label>
    <type>Text</type>
</CustomField>