force-app/main/default/objects/Staffing_Details__c/fields/Is_Bad_Debt__c.field-meta.xml
<CustomField>
    <fullName>Is_Bad_Debt__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the record is for bad debt</description>
    <inlineHelpText>Indicates if the record is for bad debt</inlineHelpText>
    <label>Is Bad Debt</label>
    <type>Checkbox</type>
</CustomField>