force-app/main/default/objects/Staffing_Details__c/fields/Office__c.field-meta.xml
<CustomField>
    <fullName>Office__c</fullName>
    <description>Office of the staff</description>
    <label>Office</label>
    <length>50</length>
    <type>Text</type>
</CustomField>