force-app/main/default/objects/Staffing_Details__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is only for the opportunity revenue</description>
    <inlineHelpText>This is only for the opportunity revenue</inlineHelpText>
    <label>Opportunity</label>
    <referenceTo>Opportunity__c</referenceTo>
    <relationshipLabel>Staffing Details</relationshipLabel>
    <relationshipName>Staffing_Details</relationshipName>
    <type>Lookup</type>
</CustomField>