force-app/main/default/objects/Staffing_Details__c/fields/Opportunity_Client_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Client_Name__c</fullName>
    <formula>Opportunity__r.Client_MN_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Client Name</label>
    <type>Text</type>
</CustomField>