force-app/main/default/objects/Staffing_Details__c/fields/Opportunity_Client_Number__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Client_Number__c</fullName>
    <formula>Opportunity__r.Client_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Client Number</label>
    <type>Text</type>
</CustomField>