force-app/main/default/objects/Staffing_Details__c/fields/Opportunity_FY__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_FY__c</fullName>
    <description>FY of the revenue date on Opportunity</description>
    <formula>IF(MONTH(  DATEVALUE(Opportunity__r.Revenue_Date__c) ) &gt;=4,   TEXT(YEAR( DATEVALUE(Opportunity__r.Revenue_Date__c))+1), TEXT(YEAR( DATEVALUE(Opportunity__r.Revenue_Date__c))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>FY of the revenue date on Opportunity</inlineHelpText>
    <label>Opportunity FY</label>
    <type>Text</type>
</CustomField>