force-app/main/default/objects/Staffing_Details__c/fields/Opportunity_Industry_Group__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Industry_Group__c</fullName>
    <description>Industry group on Opportunity</description>
    <formula>Opportunity__r.Industry_Group_REPORTING__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Industry group on Opportunity</inlineHelpText>
    <label>Opportunity Industry Group</label>
    <type>Text</type>
</CustomField>