force-app/main/default/objects/Staffing_Details__c/fields/Opportunity_Job_Type__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Job_Type__c</fullName>
    <description>Job Type on Opportunity</description>
    <formula>TEXT(Opportunity__r.Job_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Job Type on Opportunity</inlineHelpText>
    <label>Opportunity Job Type</label>
    <type>Text</type>
</CustomField>