force-app/main/default/objects/Staffing_Details__c/fields/Opportunity_Line_of_Business__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Line_of_Business__c</fullName>
    <formula>TEXT(Opportunity__r.Line_of_Business__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Line of Business</label>
    <type>Text</type>
</CustomField>