force-app/main/default/objects/Staffing_Details__c/fields/Opportunity_Period__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Period__c</fullName>
    <description>Period for Revenue Date on Opportunity</description>
    <formula>TEXT(YEAR(DATEVALUE( Opportunity__r.Revenue_Date__c )) * 100 + MONTH(DATEVALUE( Opportunity__r.Revenue_Date__c )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Period for Revenue Date on Opportunity</inlineHelpText>
    <label>Opportunity Period</label>
    <type>Text</type>
</CustomField>