force-app/main/default/objects/Staffing_Details__c/fields/Opportunity_Revenue_Date__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Revenue_Date__c</fullName>
    <formula>Opportunity__r.Revenue_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Revenue Date</label>
    <type>DateTime</type>
</CustomField>