force-app/main/default/objects/Staffing_Details__c/fields/Opportunity_Sector__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Sector__c</fullName>
    <formula>TEXT( Opportunity__r.Sector__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Sector</label>
    <type>Text</type>
</CustomField>