force-app/main/default/objects/Staffing_Details__c/fields/Ownership__c.field-meta.xml
<CustomField>
    <fullName>Ownership__c</fullName>
    <formula>TEXT(Engagement__r.Subject_Company_Ownership__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ownership</label>
    <type>Text</type>
</CustomField>