force-app/main/default/objects/Staffing_Details__c/fields/Period__c.field-meta.xml
<CustomField>
    <fullName>Period__c</fullName>
    <description>Period, when the revenue is generated</description>
    <formula>TEXT(Revenue_Accrual__r.Year__c) +  TEXT(Revenue_Accrual__r.Month__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Period</label>
    <type>Text</type>
</CustomField>