force-app/main/default/objects/Staffing_Details__c/fields/Period_Accrued_Fee_Net__c.field-meta.xml
<CustomField>
    <fullName>Period_Accrued_Fee_Net__c</fullName>
    <description>Period Accrued Fee Net as of the last revenue export</description>
    <inlineHelpText>Period Accrued Fee Net as of the last revenue export</inlineHelpText>
    <label>Period Accrued Fee Net</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>