force-app/main/default/objects/Staffing_Details__c/fields/Primary_Office__c.field-meta.xml
<CustomField>
    <fullName>Primary_Office__c</fullName>
    <formula>TEXT(Engagement__r.Primary_Office__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Office</label>
    <type>Text</type>
</CustomField>