force-app/main/default/objects/Staffing_Details__c/fields/Project_Entity_Code__c.field-meta.xml
<CustomField>
    <fullName>Project_Entity_Code__c</fullName>
    <formula>Engagement__r.Legal_Entity__r.ERP_Entity_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Entity Code</label>
    <type>Text</type>
</CustomField>