force-app/main/default/objects/Staffing_Details__c/fields/Resource_Entity_Code__c.field-meta.xml
<CustomField>
    <fullName>Resource_Entity_Code__c</fullName>
    <description>Stores Entity code of the deal team member. This may be different from the Staff Entity for QM people or US people</description>
    <label>Resource Entity Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>