force-app/main/default/objects/Staffing_Details__c/fields/Revenue_Accrual__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Accrual__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Look up to the corresponding revenue accrual record</description>
    <label>Revenue Accrual</label>
    <referenceTo>Revenue_Accrual__c</referenceTo>
    <relationshipLabel>Staffing Details</relationshipLabel>
    <relationshipName>Staffing_Details</relationshipName>
    <type>Lookup</type>
</CustomField>