force-app/main/default/objects/Staffing_Details__c/fields/Revenue_Date__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Date__c</fullName>
    <formula>Revenue_Accrual__r.Monthly_Revenue_Process_Control__r.Revenue_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Revenue Date</label>
    <type>Date</type>
</CustomField>