force-app/main/default/objects/Staffing_Details__c/fields/Role_Allocation__c.field-meta.xml
<CustomField>
    <fullName>Role_Allocation__c</fullName>
    <description>Role allocation, defined for the job type</description>
    <label>Role Allocation</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>