force-app/main/default/objects/Staffing_Details__c/fields/Role_Count__c.field-meta.xml
<CustomField>
    <fullName>Role_Count__c</fullName>
    <description>Number of staff per role</description>
    <label>Role Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>