force-app/main/default/objects/Staffing_Details__c/fields/Staff_LOB__c.field-meta.xml
<CustomField>
    <fullName>Staff_LOB__c</fullName>
    <label>Staff LOB</label>
    <length>10</length>
    <type>Text</type>
</CustomField>