force-app/main/default/objects/Staffing_Details__c/fields/Total_Role_Allocation__c.field-meta.xml
<CustomField>
    <fullName>Total_Role_Allocation__c</fullName>
    <description>Sum of the role allocations</description>
    <label>Total Role Allocation</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>