force-app/main/default/objects/Staffing_Details__c/listViews/View_All.listView-meta.xml
<ListView>
    <fullName>View_All</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>View All</label>
</ListView>